--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root{
     --background1: linear-gradient(to right bottom,rgb(53, 92, 125), rgb(108, 91, 123), rgb(192, 108, 132));
     --background2: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
+    --background: linear-gradient(45deg, #41506b, #35bcbf);
 }
 
 *{
@@ -31,4 +32,29 @@ ul{
 .container{
     margin-top: 5em;
     padding: 0 7%;
+}
+
+input, textarea{
+    border: none;
+    padding: 10px;
+    outline: none;
+    box-shadow: 0 0 5px black;
+    margin: 1em;
+    border-radius: 10px;
+}
+
+form{
+    box-shadow: 0 0 10px black;
+    padding: 2em;
+    width: fit-content;
+    background: lightgray;
+    margin: 0.5em 0;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+form div{
+    display: flex;
+    align-items: center;
 }
